<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/orange"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headerTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_vertical"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/login"
        android:layout_width="280dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/login_edit"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/senhaText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText" />

    <TextView
        android:id="@+id/senhaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/senha"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="280dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/senha_edit"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/entrarButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senhaText" />

    <Button
        android:id="@+id/entrarButton"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple"
        android:text="@string/entrar_btn"
        android:textAllCaps="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/esqueciText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha" />

    <TextView
        android:id="@+id/esqueciText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/esqueci_senha"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:clickable="true"
        android:onClick="exibirDialogAlterarSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrarButton" />

</androidx.constraintlayout.widget.ConstraintLayout>